--- a/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Busqueda.cshtml
@@ -517,7 +517,7 @@
             var fechF = this['fech_fin'].value;
 
             /*Regla 1 para la validadcion de al menos un campo*/
-            if (fechI == '' && fechF == '' && $("#fech_fin").val() == '' && $("#idCategoria").val() == '' &&
+            if (fechI == '' && fechF == ''  && $("#idCategoria").val() == '' &&
                 $("#idSubCat").val() == '' && $("#idRegion").val() == '' && $("#idProv").val() == '') {
 
                 $("#alerta").append('<strong>Ingrese al menos un campo!</strong>').show();
