--- a/WebApplication4/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index.cshtml
@@ -139,7 +139,7 @@
 
 
 
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, nombre = ViewBag.nombre, fech_ini = fechaI, fech_fin = fechaF, idCategoria = ViewBag.idCategoria, idSubCat = ViewBag.idSubCat, idRegion = ViewBag.idRegion, idProv = ViewBag.idProv }));
+    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, nombre = ViewBag.nombre, fech_ini = fechaI, fech_fin = fechaF, idCategoria = ViewBag.idCategoria, idSubCat = ViewBag.idSubCat, idRegion = ViewBag.idRegion }));
 }
 
             </div>
@@ -195,7 +195,7 @@
                 var fechF = this['fech_fin'].value;
 
                 /*Regla 1 para la validadcion de al menos un campo*/
-                if (fechI == '' && fechF == '' && $("#fech_fin").val() == '' && $("#idCategoria").val() == '' &&
+                if (fechI == '' && fechF == ''  && $("#idCategoria").val() == '' &&
                     $("#idSubCat").val() == '' && $("#idRegion").val() == '') {
 
                     $("#alerta").append('<strong>Ingrese al menos un campo!</strong>').show();
