--- a/WebApplication4/WebApplication4/Views/Ventas/Devolucion.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/Devolucion.cshtml
@@ -42,7 +42,7 @@
     @{
         List<WebApplication4.Models.DevolucionModel> devoluciones;
         //if (Session["Bus"] != null)
-        devoluciones = (List<WebApplication4.Models.DevolucionModel>)Session["Bus"];
+        devoluciones = (List<WebApplication4.Models.DevolucionModel>)Session["BusquedaDev"];
     }
     <h4>Resultados:</h4>
     <div class="row">
@@ -68,6 +68,7 @@
                         foreach (var row in devoluciones)
                         {
                             <tr id=@row.codDev onclick="myFunction(this)">
+                                <td>@row.codDev</td>
                                 <td>@row.numDoc</td>
                                 <td>@row.nombre</td>
                                 <td>@row.fecha</td>
@@ -156,9 +157,9 @@
     }
     //falta el view y que muestre
     function redirigeDevolucion() {
-        var fila = $('#idFila').val();
-        if (fila != "") {
-            window.location.href = '/Ventas/VerDetalle?DetVenta=' + fila;
+        var detVen = $('#idFila').val();
+        if (detVen != "") {
+            window.location.href = '/Ventas/VerDetalle?DetVen=' + detVen;
         } else {
             alert("Seleccione una Fila");
             evento = "";
